[package]
name = "snake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.23.2"
wutil = { git = "https://github.com/wyhhh/wutil.git"}
vec_list = {git = "https://github.com/wyhhh/vec_list" }